# dawarich-api

./: README.md  pyproject.toml
.github/workflows/: python-publish.yaml
dawarich_api/: api_calls.py  response_model.py
tests/: test_api.py
